--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "eth-marketplace",
+  "name": "eth-swap",
   "version": "0.1.0",
-  "description": "An Ethereum Marketplace",
+  "description": "An instant ERC-20 Crypto Exchange",
   "author": "gregory@dappuniversity.com",
   "dependencies": {
     "babel-polyfill": "6.26.0",
